--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: url('https://i.postimg.cc/PqNGSCJz/red-black-animation.gif') center center/cover no-repeat;
+      background: url('https://i.postimg.cc/qvzNLLmz/electric-blue-glow.gif') center center/cover no-repeat;
       z-index: -2;
       animation: moveBackground 20s linear infinite;
       opacity: 0.3;
@@ -45,8 +45,8 @@
     .logo {
       font-size: 2rem;
       font-weight: 600;
-      color: #ff0033;
-      text-shadow: 0 0 10px #ff0033, 0 0 20px #ff0033;
+      color: #00FFFF;
+      text-shadow: 0 0 10px #00FFFF, 0 0 20px #00FFFF;
       animation: glow 2s ease-in-out infinite alternate;
     }
     .nav-links a {
@@ -57,12 +57,12 @@
       transition: color 0.3s, text-shadow 0.3s;
     }
     .nav-links a:hover {
-      color: #ff0033;
-      text-shadow: 0 0 5px #ff0033, 0 0 10px #ff0033, 0 0 20px #ff0033;
+      color: #00FFFF;
+      text-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 20px #00FFFF;
     }
     @keyframes glow {
-      0% { text-shadow: 0 0 10px #ff0033, 0 0 20px #ff0033; }
-      100% { text-shadow: 0 0 20px #ff0033, 0 0 40px #ff0033; }
+      0% { text-shadow: 0 0 10px #00FFFF, 0 0 20px #00FFFF; }
+      100% { text-shadow: 0 0 20px #00FFFF, 0 0 40px #00FFFF; }
     }
     .section {
       padding: 5rem 2rem;
@@ -75,13 +75,13 @@
     }
     .hero h1 {
       font-size: 3.5rem;
-      color: #ff0033;
-      text-shadow: 0 0 15px #ff0033, 0 0 30px #ff0033;
+      color: #00FFFF;
+      text-shadow: 0 0 15px #00FFFF, 0 0 30px #00FFFF;
       animation: glow 2s ease-in-out infinite alternate;
     }
     .typed-text {
       font-size: 1.5rem;
-      color: #ff0033;
+      color: #00FFFF;
       margin-top: 1rem;
     }
     .hero p {
@@ -94,14 +94,14 @@
       height: 160px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #ff0033;
+      border: 4px solid #00FFFF;
       display: block;
       margin: 2rem auto;
     }
     .section h2 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
-      color: #ff0033;
+      color: #00FFFF;
     }
     .section p {
       font-size: 1.1rem;
@@ -113,7 +113,7 @@
       display: inline-block;
       margin-top: 2rem;
       padding: .8rem 1.5rem;
-      background: #ff0033;
+      background: #00BFFF;
       color: black;
       font-weight: bold;
       border-radius: 5px;
@@ -121,7 +121,7 @@
       transition: background 0.3s;
     }
     .more-btn:hover {
-      background: #cc002a;
+      background: #009acd;
     }
     .contact-info a {
       color: white;
@@ -129,21 +129,21 @@
       transition: color 0.3s, text-shadow 0.3s;
     }
     .contact-info a:hover {
-      color: #ff0033;
-      text-shadow: 0 0 5px #ff0033, 0 0 10px #ff0033, 0 0 20px #ff0033;
+      color: #00FFFF;
+      text-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 20px #00FFFF;
     }
     .social-icons {
       margin-top: 1rem;
     }
     .social-icons a {
-      color: #ff0033;
+      color: #00FFFF;
       margin: 0 10px;
       font-size: 1.5rem;
       transition: transform 0.3s ease, text-shadow 0.3s;
     }
     .social-icons a:hover {
       transform: scale(1.2);
-      text-shadow: 0 0 5px #ff0033, 0 0 10px #ff0033, 0 0 20px #ff0033;
+      text-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 20px #00FFFF;
     }
     footer {
       background: rgba(0, 0, 0, 0.9);
@@ -154,7 +154,7 @@
       z-index: 10;
     }
     footer a {
-      color: #ff0033;
+      color: #00FFFF;
       text-decoration: none;
     }
   </style>
